--- a/viewers/restfulobjects/jaxrs-resteasy/pom.xml
+++ b/viewers/restfulobjects/jaxrs-resteasy/pom.xml
@@ -96,6 +96,14 @@
 					<artifactId>asm</artifactId>
 				</exclusion>
 				<exclusion>
+				    <groupId>org.jboss.resteasy</groupId>
+				    <artifactId>resteasy-servlet-initializer</artifactId>
+				</exclusion>
+				<exclusion>
+    				<groupId>org.jboss.resteasy</groupId>
+    				<artifactId>resteasy-jackson2-provider</artifactId>
+				</exclusion>
+				<exclusion>
 					<groupId>com.fasterxml.jackson.module</groupId>
 					<artifactId>jackson-module-jaxb-annotations</artifactId>
 				</exclusion>
@@ -122,6 +130,17 @@
 		    <groupId>org.jboss.resteasy.spring</groupId>
 			<artifactId>resteasy-spring</artifactId>
 		</dependency>
+		<dependency>
+		    <groupId>org.jboss.resteasy</groupId>
+		    <artifactId>resteasy-servlet-initializer</artifactId>
+		    <version>6.2.1.Final</version>
+		</dependency>
+		<dependency>
+			<groupId>org.jboss.resteasy</groupId>
+			<artifactId>resteasy-jackson2-provider</artifactId>
+			<version>6.2.1.Final</version>
+		</dependency>
+		
 
 		<dependency>
 		    <groupId>org.jboss.resteasy</groupId>
