--- a/viewers/restfulobjects/jaxrs-resteasy/pom.xml
+++ b/viewers/restfulobjects/jaxrs-resteasy/pom.xml
@@ -129,18 +129,29 @@
 		<dependency>
 		    <groupId>org.jboss.resteasy.spring</groupId>
 			<artifactId>resteasy-spring</artifactId>
+			<exclusions>
+				<exclusion>
+					<groupId>org.jboss.resteasy</groupId>
+					<artifactId>resteasy-client</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>org.jboss.resteasy</groupId>
+			<artifactId>resteasy-client</artifactId>
+			<version>${resteasy.version}</version> 
+			<!--			6.2.2.Final-->
 		</dependency>
 		<dependency>
 		    <groupId>org.jboss.resteasy</groupId>
 		    <artifactId>resteasy-servlet-initializer</artifactId>
-		    <version>6.2.2.Final</version>
+		    <version>${resteasy.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.jboss.resteasy</groupId>
 			<artifactId>resteasy-jackson2-provider</artifactId>
-			<version>6.2.2.Final</version>
+			<version>${resteasy.version}</version>
 		</dependency>
-		
 
 		<dependency>
 		    <groupId>org.jboss.resteasy</groupId>
