ISIS-3308: purge jdk-supplemental and cleanup core pom
- that is, consolidate dependency management in central BOM

--- a/viewers/restfulobjects/jaxrs-resteasy/pom.xml
+++ b/viewers/restfulobjects/jaxrs-resteasy/pom.xml
@@ -87,7 +87,7 @@
 					<groupId>org.jboss.logging</groupId>
 					<artifactId>jboss-logging</artifactId>
 				</exclusion>
-				<!-- transitively provided by causeway-jdk-supplemental -->
+				<!-- transitively provided by causeway-commons -->
 				<exclusion>
 					<groupId>org.ow2.asm</groupId>
 					<artifactId>asm</artifactId>
