--- a/api/applib/pom.xml
+++ b/api/applib/pom.xml
@@ -70,13 +70,6 @@
 
     <dependencies>
 
-		<!-- JDK11+ SUPPORT AND JEE API -->
-		<dependency>
-			<groupId>org.apache.causeway.core</groupId>
-			<artifactId>causeway-jdk-supplemental</artifactId>
-			<type>pom</type>
-		</dependency>
-
         <dependency>
             <groupId>org.apache.causeway.commons</groupId>
 			<artifactId>causeway-commons</artifactId>
@@ -93,6 +86,12 @@
 		    <groupId>jakarta.validation</groupId>
 		    <artifactId>jakarta.validation-api</artifactId>
 	    </dependency>
+	    
+	    <!-- provides @Column -->
+	    <dependency>
+		    <groupId>jakarta.persistence</groupId>
+		    <artifactId>jakarta.persistence-api</artifactId>
+		</dependency>
 
         <!-- marked for deprecation -->
     	<dependency>
