--- a/api/schema/pom.xml
+++ b/api/schema/pom.xml
@@ -13,41 +13,37 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-
 	<parent>
 		<groupId>org.apache.causeway.core</groupId>
 		<artifactId>causeway-core</artifactId>
 		<version>2.0.0-SNAPSHOT</version>
 		<relativePath>../../core/pom.xml</relativePath>
 	</parent>
-
 	<artifactId>causeway-schema</artifactId>
-
 	<packaging>jar</packaging>
 	<name>Apache Causeway Api - Schemas</name>
 	<description>
         Apache Causeway schemas, for conversion into canonical DTOs (for use in integration scenarios).
     </description>
-
 	<properties>
 		<jar-plugin.automaticModuleName>org.apache.causeway.schema</jar-plugin.automaticModuleName>
 		<git-plugin.propertiesDir>org/apache/causeway/schema</git-plugin.propertiesDir>
 	</properties>
-
 	<dependencies>
-		<dependency>
-			<groupId>org.apache.causeway.core</groupId>
-			<artifactId>causeway-jdk-supplemental</artifactId>
-			<type>pom</type>
-		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>jakarta.xml.bind</groupId>
+			<artifactId>jakarta.xml.bind-api</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>jakarta.inject</groupId>
+			<artifactId>jakarta.inject-api</artifactId>
+		</dependency>
 	</dependencies>
-
 	<profiles>
-
 		<profile>
 			<id>xsd-to-java</id>
 			<activation>
@@ -55,9 +51,7 @@
 					<name>!skip.xsd-to-java</name>
 				</property>
 			</activation>
-
 			<build>
-
 				<plugins>
 					<plugin>
 						<groupId>org.jvnet.jaxb2.maven2</groupId>
@@ -132,6 +126,4 @@
 			</build>
 		</profile>
 	</profiles>
-
-
 </project>
