--- a/commons/pom.xml
+++ b/commons/pom.xml
@@ -56,12 +56,143 @@
 	<dependencies>
 
 		<!-- JDK11+ SUPPORT AND JEE API -->
+		<dependency>
+			<groupId>com.sun.xml.ws</groupId>
+			<artifactId>jaxws-ri</artifactId>
+			<version>${jaxws-ri.version}</version>
+			<type>pom</type>
+			<exclusions>
+				<exclusion>
+					<groupId>com.sun.xml.bind.external</groupId>
+					<artifactId>rngom</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>com.sun.xml.bind.external</groupId>
+					<artifactId>relaxng-datatype</artifactId>
+				</exclusion>
+				<exclusion>
+					<!-- version clash with spring, we pull it in elsewhere -->
+					<groupId>jakarta.annotation</groupId>
+					<artifactId>jakarta.annotation-api</artifactId>
+				</exclusion>
+				<exclusion>
+					<!-- version clash jakarta.jws:jakarta.jws-api: 1.1.1 vs 2.1.0 -->
+					<groupId>jakarta.jws</groupId>
+					<artifactId>jakarta.jws-api</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>com.sun.xml.ws</groupId>
+					<artifactId>jaxws-rt</artifactId>
+				</exclusion>
+				<exclusion>
+					<!-- version clash org.eclipse.persistence:org.eclipse.persistence.core: 
+						2.7.6 vs 2.7.7 -->
+					<groupId>org.eclipse.persistence</groupId>
+					<artifactId>org.eclipse.persistence.moxy</artifactId>
+				</exclusion>
+				<exclusion>
+					<!-- version clash org.eclipse.persistence:org.eclipse.persistence.core: 
+						2.7.6 vs 2.7.7 -->
+					<groupId>org.eclipse.persistence</groupId>
+					<artifactId>org.eclipse.persistence.sdo</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>com.sun.xml.ws</groupId>
+			<artifactId>jaxws-rt</artifactId>
+			<version>${jaxws-ri.version}</version>
+			<exclusions>
+				<exclusion>
+					<groupId>com.fasterxml.woodstox</groupId>
+					<artifactId>woodstox-core</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.codehaus.woodstox</groupId>
+					<artifactId>stax2-api</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>com.sun.xml.bind.external</groupId>
+					<artifactId>rngom</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>jakarta.annotation</groupId>
+					<artifactId>jakarta.annotation-api</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.jvnet.staxex</groupId>
+					<artifactId>stax-ex</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.woodstox</groupId>
+			<artifactId>woodstox-core</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.codehaus.woodstox</groupId>
+			<artifactId>stax2-api</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.persistence</groupId>
+			<artifactId>org.eclipse.persistence.moxy</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.persistence</groupId>
+			<artifactId>org.eclipse.persistence.sdo</artifactId>
+		</dependency>
 
 		<dependency>
-			<groupId>org.apache.causeway.core</groupId>
-			<artifactId>causeway-jdk-supplemental</artifactId>
-			<type>pom</type>
+			<groupId>com.sun.xml.bind</groupId>
+			<artifactId>jaxb-impl</artifactId>
 		</dependency>
+		
+		<dependency>
+			<groupId>com.sun.xml.bind.external</groupId>
+			<artifactId>rngom</artifactId>
+			<version>2.3.6</version> 
+		</dependency>
+		<dependency>
+			<groupId>com.sun.xml.bind.external</groupId>
+			<artifactId>relaxng-datatype</artifactId>
+			<version>2.3.6</version> 
+		</dependency>
+		
+		<dependency>
+			<!-- provides @Inject, @Qualifier, -->
+		    <groupId>jakarta.inject</groupId>
+		    <artifactId>jakarta.inject-api</artifactId>
+		</dependency>
+		<dependency>
+        	<!-- provides javax.enterprise.inject.* -->
+            <groupId>jakarta.enterprise</groupId>
+            <artifactId>jakarta.enterprise.cdi-api</artifactId>
+            <version>2.0.1</version> <!-- do not upgrade before Spring 6 -->
+            <exclusions>
+            	<exclusion>
+            		<groupId>jakarta.inject</groupId>
+		    		<artifactId>jakarta.inject-api</artifactId>
+            	</exclusion>
+            	<exclusion>
+            		<groupId>javax.inject</groupId>
+            		<artifactId>javax.inject</artifactId>
+            	</exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+        	<!-- provides javax.transaction.TransactionalException -->
+		    <groupId>jakarta.transaction</groupId>
+		    <artifactId>jakarta.transaction-api</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>jakarta.annotation</groupId>
+			<artifactId>jakarta.annotation-api</artifactId>
+		</dependency>
+		<dependency>
+			<!-- MediaType support -->
+            <groupId>org.jboss.spec.javax.ws.rs</groupId>
+            <artifactId>jboss-jaxrs-api_2.1_spec</artifactId>
+        </dependency>
 		
 		<dependency>
 			<groupId>org.apache.causeway.core</groupId>
@@ -116,7 +247,6 @@
 					<groupId>org.springframework.boot</groupId>
 					<artifactId>spring-boot-starter-logging</artifactId>
 				</exclusion>
-
 			</exclusions>
 		</dependency>
 
