--- a/testing/archtestsupport/applib/pom.xml
+++ b/testing/archtestsupport/applib/pom.xml
@@ -29,9 +29,8 @@
     <dependencies>
 
 		<dependency>
-			<groupId>org.apache.causeway.core</groupId>
-			<artifactId>causeway-jdk-supplemental</artifactId>
-			<type>pom</type>
+			<groupId>org.apache.causeway.commons</groupId>
+			<artifactId>causeway-commons</artifactId>
 		</dependency>
 
         <dependency>
