--- a/viewers/wicket/applib/pom.xml
+++ b/viewers/wicket/applib/pom.xml
@@ -37,6 +37,12 @@
 
     <dependencies>
 
+		<dependency>
+            <groupId>org.apache.causeway.commons</groupId>
+            <artifactId>causeway-commons</artifactId>
+            <scope>provided</scope>
+        </dependency>
+
         <dependency>
             <groupId>org.apache.causeway.core</groupId>
             <artifactId>causeway-applib</artifactId>
