ISIS-3308: purge legacy com.sun.xml.bind:jaxb-ri keep jaxb-impl
- fixes for MetaModelRegressionTest, that prev. failed because of new
attribute ordering in param tags

--- a/core/runtimeservices/pom.xml
+++ b/core/runtimeservices/pom.xml
@@ -71,6 +71,11 @@
     </build>
 
     <dependencies>
+		
+		<dependency>
+		    <groupId>jakarta.mail</groupId>
+		    <artifactId>jakarta.mail-api</artifactId>
+		</dependency>
 	
         <dependency>
             <groupId>org.apache.causeway.core</groupId>
