--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -129,8 +129,7 @@ It is therefore a copy of org.apache:apache, with customisations clearly identif
         <javafaker.version>1.0.2</javafaker.version>
         <javassist.version>3.29.2-GA</javassist.version>
         <javax-servlet.version>4.0.1</javax-servlet.version>
-        <jaxb-impl.version>2.3.3</jaxb-impl.version> <!-- don't upgrade to 3.x  before Spring 6-->
-        <jaxws-ri.version>2.3.3</jaxws-ri.version> <!-- don't upgrade to 3.x  before Spring 6-->
+        <jakarta.xml.bind-api.version>2.3.3</jakarta.xml.bind-api.version> <!-- don't upgrade to 3.x  before Spring 6-->
 
         <jbcrypt.version>0.4</jbcrypt.version>
         <jboss-jaxrs-api_2.1_spec.version>2.0.2.Final</jboss-jaxrs-api_2.1_spec.version>
@@ -247,13 +246,18 @@ It is therefore a copy of org.apache:apache, with customisations clearly identif
 			<dependency>
 				<groupId>org.eclipse.persistence</groupId>
 				<artifactId>org.eclipse.persistence.moxy</artifactId>
-				<version>2.7.11</version>
+				<version>2.7.11</version> <!-- do not upgrade 2.x to 3.x or higher until Spring 6 -->
 			</dependency>
 			<dependency>
 				<groupId>org.eclipse.persistence</groupId>
 				<artifactId>org.eclipse.persistence.sdo</artifactId>
-				<version>2.7.11</version>
+				<version>2.7.11</version> <!-- do not upgrade 2.x to 3.x or higher until Spring 6 -->
 			</dependency>
+			<dependency>
+	            <groupId>com.sun.xml.bind</groupId>
+	            <artifactId>jaxb-impl</artifactId>
+	            <version>2.3.3</version> <!-- do not upgrade 2.x to 3.x or higher until Spring 6 -->
+	        </dependency>
 			
 			<dependency>
 				<groupId>org.ow2.asm</groupId>
@@ -377,12 +381,6 @@ It is therefore a copy of org.apache:apache, with customisations clearly identif
 				<groupId>com.ullink.slack</groupId>
 				<artifactId>simpleslackapi</artifactId>
 				<version>${simpleslackapi.version}</version>
-			</dependency>
-
-			<dependency>
-				<groupId>com.sun.xml.bind</groupId>
-				<artifactId>jaxb-impl</artifactId>
-				<version>${jaxb-impl.version}</version>
 			</dependency>
 
 			<dependency>
