--- a/.github/workflows/ci-build-artifacts-no-push-maven.yml
+++ b/.github/workflows/ci-build-artifacts-no-push-maven.yml
@@ -4,9 +4,11 @@ on:
   push:
     branches:
       - master
+      - spring6
   pull_request:
     branches:
       - master
+      - spring6
 
 permissions:
   contents: read
