--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -189,7 +189,7 @@ It is therefore a copy of org.apache:apache, with customisations clearly identif
 
         <togglz.version>3.3.2</togglz.version>
 
-        <vaadin.version>23.3.0</vaadin.version>
+        <vaadin.version>24.0.0.alpha5</vaadin.version>
 
         <wicket.version>936167650a</wicket.version> <!--  9.4.0 is last known good, before wicket put jupiter-api on the module graph -->
         
@@ -591,6 +591,11 @@ It is therefore a copy of org.apache:apache, with customisations clearly identif
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
+			<dependency>
+			    <groupId>com.vaadin</groupId>
+			    <artifactId>vaadin-maven-plugin</artifactId>
+			    <version>${vaadin.version}</version>
+			</dependency>
 
 			<dependency>
 				<!-- <groupId>org.apache.wicket</groupId> -->
@@ -975,6 +980,11 @@ It is therefore a copy of org.apache:apache, with customisations clearly identif
 			<snapshots>
 				<enabled>false</enabled>
 			</snapshots>
+		</repository>
+		<repository>
+			<!-- temporary till release of vaadin 24.x with jakarta namespaces -->
+            <id>vaadin.prereleases</id>
+			<url>https://maven.vaadin.com/vaadin-prereleases/</url>
 		</repository>
     </repositories>
     <pluginRepositories>
