--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -125,10 +125,12 @@ It is therefore a copy of org.apache:apache, with customisations clearly identif
 
         <htmlparser.version>2.1</htmlparser.version>
 
-        <jakartaee.version>8.0.0</jakartaee.version>
         <javafaker.version>1.0.2</javafaker.version>
         <javassist.version>3.29.2-GA</javassist.version>
-        <javax-servlet.version>4.0.1</javax-servlet.version>
+
+        <jakartaee.version>8.0.0</jakartaee.version>
+        <jakarta.inject-api.version>1.0.5</jakarta.inject-api.version> <!-- do not upgrade 1.x to 2.x until Spring 6 -->
+        <jakarta.servlet-api.version>4.0.4</jakarta.servlet-api.version> <!-- do not upgrade 4.x to 6.x until Spring 6 -->
         <jakarta.xml.bind-api.version>2.3.3</jakarta.xml.bind-api.version> <!-- don't upgrade to 3.x  before Spring 6-->
 
         <jbcrypt.version>0.4</jbcrypt.version>
@@ -429,13 +431,12 @@ It is therefore a copy of org.apache:apache, with customisations clearly identif
 			<dependency>
 			    <groupId>jakarta.inject</groupId>
 			    <artifactId>jakarta.inject-api</artifactId>
-			    <version>1.0.5</version> <!-- do not upgrade 1.x to 2.x until Spring 6 -->
+			    <version>${jakarta.inject-api.version}</version>
 		    </dependency>
-
 			<dependency>
-				<groupId>javax.servlet</groupId>
-				<artifactId>javax.servlet-api</artifactId>
-				<version>${javax-servlet.version}</version>
+			    <groupId>jakarta.servlet</groupId>
+			    <artifactId>jakarta.servlet-api</artifactId>
+			    <version>${jakarta.servlet-api.version}</version>
 			</dependency>
 
 			<!-- 3.2 not available yet, instead use org.datanucleus:javax.jdo
