ISIS-3255: fixes up docs

--- a/antora/components/conguide/antora.yml
+++ b/antora/components/conguide/antora.yml
@@ -22,6 +22,7 @@ start_page: ROOT:about.adoc
 nav:
 - modules/ROOT/nav.adoc
 - modules/documentation/nav.adoc
+- modules/nightly-deploys/nav.adoc
 - modules/intellij/nav.adoc
 - modules/eclipse/nav.adoc
 - modules/git/nav.adoc
