--- a/starters/pom.xml
+++ b/starters/pom.xml
@@ -105,13 +105,13 @@
 				<scope>import</scope>
 				<type>pom</type>
 			</dependency>
-			
+
 			<dependency>
 				<groupId>org.apache.causeway.testing</groupId>
 				<artifactId>causeway-testing-fakedata-applib</artifactId>
 				<version>2.0.0-SNAPSHOT</version>
 			</dependency>
-		
+
 			<dependency>
 				<groupId>org.apache.causeway.testing</groupId>
 				<artifactId>causeway-testing-fixtures-applib</artifactId>
@@ -125,7 +125,7 @@
 				<scope>import</scope>
 				<type>pom</type>
 			</dependency>
-			
+
 			<dependency>
 				<groupId>org.apache.causeway.testing</groupId>
 				<artifactId>causeway-testing-integtestsupport-applib</artifactId>
@@ -146,10 +146,9 @@
 		<profile>
 			<id>causeway-app-starter-datanucleusenhance</id>
 			<activation>
-				<property>
-					<name>causeway-app-starter-datanucleusenhance</name>
-					<value>true</value>
-				</property>
+				<file>
+					<exists>${basedir}/logging-dn-enhance.properties</exists>
+				</file>
 			</activation>
 			<build>
 				<plugins>
