--- a/examples/demo/domain/pom.xml
+++ b/examples/demo/domain/pom.xml
@@ -96,6 +96,10 @@
 			<groupId>org.apache.causeway.valuetypes</groupId>
 			<artifactId>causeway-valuetypes-vega-metamodel</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.causeway.extensions</groupId>
+			<artifactId>causeway-extensions-docgen</artifactId>
+		</dependency>
 
 
 		<!-- JDO specific -->
