--- a/extensions/pom.xml
+++ b/extensions/pom.xml
@@ -91,6 +91,7 @@
 	<modules>
 
 		<module>core/commandlog</module>
+		<module>core/docgen</module>
 		<module>core/excel</module>
 		<module>core/executionlog</module>
 		<module>core/executionoutbox</module>
