--- a/valuetypes/asciidoc/applib/pom.xml
+++ b/valuetypes/asciidoc/applib/pom.xml
@@ -35,6 +35,10 @@
 			<artifactId>causeway-applib</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.apache.causeway.core</groupId>
+			<artifactId>causeway-core-config</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.apache.causeway.commons</groupId>
 			<artifactId>causeway-commons</artifactId>
 		</dependency>
