--- a/persistence/jpa/eclipselink/pom.xml
+++ b/persistence/jpa/eclipselink/pom.xml
@@ -104,6 +104,12 @@
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 			<exclusions>
 				<exclusion>
+					<!-- outdated v2.0.1 transitively brought in by 
+						jakarta.transaction:jakarta.transaction-api:jar:1.3.3:compile -->
+					<groupId>jakarta.enterprise</groupId>
+					<artifactId>jakarta.enterprise.cdi-api</artifactId>
+				</exclusion>
+				<exclusion>
 					<!-- using eclipse-link instead -->
 					<groupId>org.hibernate</groupId>
 					<artifactId>hibernate-entitymanager</artifactId>
