updates title for antora docs
from 'Apache Causeway' to (lower case) 'causeway'

--- a/antora/playbooks/site.yml
+++ b/antora/playbooks/site.yml
@@ -16,7 +16,7 @@
 #  under the License.
 
 site:
-  title: Apache Causeway
+  title: causeway
   url: https://causeway.apache.org/
   start_page: docs:ROOT:about.adoc
 
