CAUSEWAY-3354: fulltext search&replace http://causeway.apache.org -> https://...

--- a/regressiontests/stable/src/main/resources/application.yml
+++ b/regressiontests/stable/src/main/resources/application.yml
@@ -55,7 +55,7 @@ causeway:
         name: Smoke Tests
         about: Smoke Tests
       credit:
-        - url:  http://causeway.apache.org
+        - url:  https://causeway.apache.org
           image: images/apache-causeway/logo-48x48.png
           name: Apache Causeway
     wicket:
