--- a/examples/demo/domain/src/main/resources/application.yml
+++ b/examples/demo/domain/src/main/resources/application.yml
@@ -87,7 +87,7 @@ causeway:
         version: ${project.version}
         about: This application demonstrates many aspects of the Apache Causeway programming model, as well as some of the most significant domain services and extensions such as the WrapperFactory, security, commands and publishing.
       credit:
-        - url:  http://causeway.apache.org
+        - url:  https://causeway.apache.org
           image: images/apache-causeway/logo-48x48.png
           name: Apache Causeway
           
