--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -1498,6 +1498,11 @@ It is therefore a copy of org.apache:apache, with customisations clearly identif
 				<version>4.0.1</version>
 			</dependency>
 			<dependency>
+			    <groupId>org.eclipse.persistence</groupId>
+			    <artifactId>org.eclipse.persistence.asm</artifactId>
+			    <version>9.4.0</version>
+			</dependency>
+			<dependency>
 	            <groupId>com.sun.xml.bind</groupId>
 	            <artifactId>jaxb-impl</artifactId>
 	            <version>4.0.2</version>
