CAUSEWAY-3252: wip, still hacking

--- a/core/config/pom.xml
+++ b/core/config/pom.xml
@@ -68,6 +68,7 @@
                             -->
                             <groupId>org.projectlombok</groupId>
                             <artifactId>lombok</artifactId>
+                            <version>${lombok.version}</version>
                         </path>
                         <path>
                             <groupId>org.springframework.boot</groupId>
