--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -783,7 +783,7 @@ It is therefore a copy of org.apache:apache, with customisations clearly identif
 				<type>jar</type>
 				<scope>compile</scope>
 			</dependency>
-			
+
 			<!-- org.apache.causeway.extensions (docgen) -->
 			<dependency>
 				<groupId>org.apache.causeway.extensions</groupId>
@@ -2132,6 +2132,16 @@ It is therefore a copy of org.apache:apache, with customisations clearly identif
 
         </dependencies>
     </dependencyManagement>
+
+	<dependencies>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>${lombok.version}</version>
+			<scope>provided</scope>
+		</dependency>
+	</dependencies>
+
     <repositories>
         <!-- breaks dependabot run: timeout due to repo not accessible
         <repository>
@@ -2229,9 +2239,12 @@ It is therefore a copy of org.apache:apache, with customisations clearly identif
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>${maven-compiler-plugin.version}</version>
                     <configuration>
+						<source>${maven.compiler.release}</source>
+						<target>${maven.compiler.release}</target>
 						<showDeprecation>true</showDeprecation>
 						<showWarnings>true</showWarnings>
 						<!-- Java compliance level, to be overridden with option maven.compiler.release -->
+<!--
 						<annotationProcessorPaths>
 							<path>
 								<groupId>org.projectlombok</groupId>
@@ -2239,6 +2252,7 @@ It is therefore a copy of org.apache:apache, with customisations clearly identif
 								<version>${lombok.version}</version>
 							</path>
 						</annotationProcessorPaths>
+-->
 					</configuration>
 					<!-- goal:compile binds to phase:compile -->
 					<!-- goal:testCompile binds to phase:test-compile -->
@@ -3041,8 +3055,42 @@ It is therefore a copy of org.apache:apache, with customisations clearly identif
 						<artifactId>datanucleus-maven-plugin</artifactId>
 						<inherited>true</inherited>
 					</plugin>
+<!--
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-compiler-plugin</artifactId>
+						<version>${maven-compiler-plugin.version}</version>
+						<configuration>
+							<showDeprecation>true</showDeprecation>
+							<showWarnings>true</showWarnings>
+							<annotationProcessorPaths>
+								<path>
+									<groupId>org.projectlombok</groupId>
+									<artifactId>lombok</artifactId>
+									<version>${lombok.version}</version>
+								</path>
+								<path>
+									<groupId>org.datanucleus</groupId>
+									<artifactId>datanucleus-jdo-query</artifactId>
+									<version>${datanucleus-jdo-query.version}</version>
+								</path>
+							</annotationProcessorPaths>
+						</configuration>
+					</plugin>
+-->
+
 				</plugins>
 			</build>
+<!--
+			<dependencies>
+				<dependency>
+					<groupId>org.datanucleus</groupId>
+					<artifactId>javax.jdo</artifactId>
+					<version>${datanucleus-jdo-api.version}</version>
+					<scope>provided</scope>  &lt;!&ndash; for datanucleus-jdo-query annotation processor, brought in via profile &ndash;&gt;
+				</dependency>
+			</dependencies>
+-->
 		</profile>
         <profile>
             <id>only-eclipse</id>
