--- a/extensions/security/audittrail/persistence-jdo/pom.xml
+++ b/extensions/security/audittrail/persistence-jdo/pom.xml
@@ -58,6 +58,13 @@
             <scope>provided</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.datanucleus</groupId>
+            <artifactId>javax.jdo</artifactId>
+            <version>${datanucleus-jdo-api.version}</version>
+            <optional>true</optional>  <!-- for datanucleus-jdo-query annotation processor, brought in via profile -->
+        </dependency>
+
         <!-- testing -->
 
         <dependency>
