CAUSEWAY-3366: allows PdfJsViewer to be annotated on mixin types

--- a/extensions/vw/pdfjs/metamodel/pom.xml
+++ b/extensions/vw/pdfjs/metamodel/pom.xml
@@ -46,6 +46,13 @@
             <artifactId>causeway-core-metamodel</artifactId>
         </dependency>
 
+        <!-- testing -->
+        <dependency>
+            <groupId>org.apache.causeway.testing</groupId>
+            <artifactId>causeway-testing-integtestsupport-applib</artifactId>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
 </project>
