CAUSEWAY-3367: updates description

--- a/.asf.yaml
+++ b/.asf.yaml
@@ -1,6 +1,6 @@
 github:
-  description: "Apache Isis™ software is a framework for rapidly developing domain-driven apps in Java. Write your business logic in entities, domain services or view models, and the framework dynamically generates a representation of that domain model as a webapp or as a RESTful API. For prototyping or production. "
-  homepage: https://isis.apache.org/
+  description: "Apache Causeway™ software is a framework for rapidly developing domain-driven apps in Java. Write your business logic in entities, domain services or view models, and the framework dynamically generates a representation of that domain model as a webapp or as a RESTful API. For prototyping or production. "
+  homepage: https://causeway.apache.org/
   labels:
     - java
     - web-framework
