--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -181,16 +181,17 @@ It is therefore a copy of org.apache:apache, with customisations clearly identif
         <slf4j-api.version>2.0.6</slf4j-api.version> <!-- also provided by spring-boot-starter-logging, needed to solve convergence issues -->
         <spring-boot.version>3.0.4</spring-boot.version>
         <summernote.version>0.8.20</summernote.version>
-        <surefire-plugin.argLine>
-			-Xmx384m 
-		</surefire-plugin.argLine>
+        <surefire-plugin.argLine>-Xmx384m</surefire-plugin.argLine>
         <swagger-core.version>2.2.8</swagger-core.version>
 
         <togglz.version>3.3.3</togglz.version>
 
         <vaadin.version>24.0.0.alpha5</vaadin.version>
 
-        <wicket.version>936167650a</wicket.version> <!--  9.4.0 is last known good, before wicket put jupiter-api on the module graph -->
+		<!--  9.4.0 is last known good, before wicket put jupiter-api on the module graph -->
+		<!--  <wicket.version>936167650a</wicket.version> 28 Nov '22 build -->
+        <wicket.version>spring6-4e058bde3a-1</wicket.version>
+        
         
         <wicket-bootstrap.version>6.0.1</wicket-bootstrap.version> <!-- de.agilecoders.wicket:wicket-bootstrap... -->
         <wicket-webjars.version>3.0.6</wicket-webjars.version>
