CAUSEWAY-3253: changes from nightly to weekly build

--- a/.github/workflows/ci-build-artifacts-push-maven.yml
+++ b/.github/workflows/ci-build-artifacts-push-maven.yml
@@ -1,10 +1,10 @@
-name: Apache Causeway Nightly Build
+name: Apache Causeway Weekly Build
 
 on:
   workflow_dispatch:
   schedule:
-    # daily 02:00 (UTC) in the morning
-    - cron: '0 2 * * *'
+    # daily 02:00 (UTC) on Sunday morning
+    - cron: '0 2 * * 0'
 
 jobs:
   build:
