--- a/incubator/viewers/vaadin/model/pom.xml
+++ b/incubator/viewers/vaadin/model/pom.xml
@@ -104,7 +104,6 @@
 		<dependency>
 			<groupId>io.swagger.core.v3</groupId>
 			<artifactId>swagger-core</artifactId>
-			<version>2.2.8</version>
 			<exclusions>
 				<exclusion>
 					<groupId>io.swagger.core.v3</groupId>
@@ -136,7 +135,7 @@
 		<dependency>
 			<groupId>io.swagger.core.v3</groupId>
 			<artifactId>swagger-models</artifactId>
-			<version>2.2.8</version>
+			<version>${swagger-core.version}</version>
 		</dependency>
 
 		<!-- TEST DEPENDENCIES -->
