CAUSEWAY-3255: updates to website

--- a/extensions/adoc/antora.yml
+++ b/extensions/adoc/antora.yml
@@ -16,7 +16,7 @@
 #  under the License.
 
 name: extensions
-title: "Extensions Catalog"
+title: "Extensions"
 version: latest
 start_page: ROOT:about.adoc
 nav:
