--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -154,6 +154,7 @@ It is therefore a copy of org.apache:apache, with customisations clearly identif
         <log4jdbc-remix.version>0.2.7</log4jdbc-remix.version>
         <lombok.version>1.18.26</lombok.version> <!-- overriding Spring -->
 
+		<maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
         <maven-release-plugin.version>3.0.0</maven-release-plugin.version>
         <momentjs.version>2.29.4</momentjs.version> <!-- keep in sync: org.apache.causeway.viewer.wicket.ui.components.scalars.datepicker.MomentJsReference -->
 
