--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -77,6 +77,7 @@ It is therefore a copy of org.apache:apache, with customisations clearly identif
 		<datanucleus-maven-plugin.verbose>false</datanucleus-maven-plugin.verbose>
 		<datanucleus-maven-plugin.fork>false</datanucleus-maven-plugin.fork>
 
+		<maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
 		<maven-source-plugin.version>3.2.1</maven-source-plugin.version>
 		<maven-surefire-plugin.version>3.0.0</maven-surefire-plugin.version>
 		<maven-surefire-report-plugin.version>3.0.0</maven-surefire-report-plugin.version>
