--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -77,8 +77,10 @@ It is therefore a copy of org.apache:apache, with customisations clearly identif
 		<datanucleus-maven-plugin.verbose>false</datanucleus-maven-plugin.verbose>
 		<datanucleus-maven-plugin.fork>false</datanucleus-maven-plugin.fork>
 
+		<maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
+        <maven-release-plugin.version>3.0.0</maven-release-plugin.version>
 		<maven-source-plugin.version>3.2.1</maven-source-plugin.version>
-		<maven-surefire-plugin.version>3.0.0-M7</maven-surefire-plugin.version>
+		<maven-surefire-plugin.version>3.0.0</maven-surefire-plugin.version>
 		<maven-surefire-report-plugin.version>3.0.0</maven-surefire-report-plugin.version>
         <!--  for surefire, failsafe and surefire-report  -->
         <maven.plugin.tools.version>3.8.1</maven.plugin.tools.version>
@@ -154,8 +156,6 @@ It is therefore a copy of org.apache:apache, with customisations clearly identif
         <log4jdbc-remix.version>0.2.7</log4jdbc-remix.version>
         <lombok.version>1.18.26</lombok.version> <!-- overriding Spring -->
 
-		<maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
-        <maven-release-plugin.version>3.0.0</maven-release-plugin.version>
         <momentjs.version>2.29.4</momentjs.version> <!-- keep in sync: org.apache.causeway.viewer.wicket.ui.components.scalars.datepicker.MomentJsReference -->
 
         <!-- See https://nodejs.org/en/download/ for latest node and npm (lts) versions -->
