--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -154,7 +154,7 @@ It is therefore a copy of org.apache:apache, with customisations clearly identif
         <junit-platform.version>1.9.2</junit-platform.version>
 
         <log4jdbc-remix.version>0.2.7</log4jdbc-remix.version>
-        <lombok.version>1.18.26</lombok.version> <!-- overriding Spring -->
+        <lombok.version>edge-SNAPSHOT</lombok.version> <!-- overriding Spring -->
 
         <momentjs.version>2.29.4</momentjs.version> <!-- keep in sync: org.apache.causeway.viewer.wicket.ui.components.scalars.datepicker.MomentJsReference -->
 
@@ -2174,6 +2174,11 @@ It is therefore a copy of org.apache:apache, with customisations clearly identif
 			<snapshots>
 				<enabled>false</enabled>
 			</snapshots>
+		</repository>
+		<repository>
+			<!-- in support of java 20 - temporary till release of lombok 1.18.28 -->
+			<id>projectlombok.org</id>
+			<url>https://projectlombok.org/edge-releases</url>
 		</repository>
         <repository>
 			<!-- temporary till release of cxf 4.0.0, shiro 2.0.0 and wicket 10.0.0 -->
