--- a/incubator/viewers/javafx/pom.xml
+++ b/incubator/viewers/javafx/pom.xml
@@ -31,15 +31,21 @@
 
 	<properties>
 		<maven.compiler.release>17</maven.compiler.release>
+		<javafx.version>17.0.2</javafx.version> 
 		<jar-plugin.automaticModuleName>org.apache.causeway.incubator.viewer.javafx</jar-plugin.automaticModuleName>
 		<git-plugin.propertiesDir>org/apache/causeway/incubator/viewer/javafx</git-plugin.propertiesDir>
-		<javafx.version>17.0.2</javafx.version>
 	</properties>
 
 	<packaging>pom</packaging>
 
 	<dependencyManagement>
 		<dependencies>
+
+			<dependency>
+				<groupId>org.apache.causeway.incubator.viewer</groupId>
+				<artifactId>causeway-viewer-javafx-headless</artifactId>
+				<version>3.0.0-SNAPSHOT</version>
+			</dependency>
 
 			<dependency>
 				<groupId>org.apache.causeway.incubator.viewer</groupId>
@@ -95,6 +101,7 @@
 	</dependencyManagement>
 
 	<modules>
+		<module>headless</module>
 		<module>model</module>
 		<module>viewer</module>
 		<module>ui</module>
