--- a/incubator/viewers/thymeflux/model/pom.xml
+++ b/incubator/viewers/thymeflux/model/pom.xml
@@ -32,6 +32,11 @@
 	<dependencies>
 
 		<dependency>
+		    <groupId>org.apache.causeway.viewer</groupId>
+		    <artifactId>causeway-viewer-commons-applib</artifactId>
+		</dependency>
+
+		<dependency>
 			<groupId>org.apache.causeway.viewer</groupId>
 			<artifactId>causeway-viewer-commons-model</artifactId>
 		</dependency>
