--- a/incubator/viewers/thymeflux/viewer/pom.xml
+++ b/incubator/viewers/thymeflux/viewer/pom.xml
@@ -42,6 +42,11 @@
 		</dependency>
 		
 		<dependency>
+		    <groupId>org.apache.causeway.viewer</groupId>
+		    <artifactId>causeway-viewer-commons-services</artifactId>
+		</dependency>
+		
+		<dependency>
 		    <groupId>org.webjars</groupId>
 		    <artifactId>bootstrap</artifactId>
 		    <version>5.2.3</version>
@@ -59,6 +64,7 @@
 			</exclusions>
 		</dependency>
 
+		
 	</dependencies>
 
 
