CAUSEWAY-3407: working on Webflux JUnit tests (WIP)

--- a/incubator/viewers/thymeflux/test/pom.xml
+++ b/incubator/viewers/thymeflux/test/pom.xml
@@ -44,7 +44,34 @@
 			<artifactId>causeway-viewer-thymeflux-viewer</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.apache.causeway.examples.apps</groupId>
+			<artifactId>demo-web</artifactId>
+			<version>3.0.0-SNAPSHOT</version>
+		</dependency>
+
+		<!-- EXTENSIONS THYMEFLUX --> 
+
+		<dependency>
+			<groupId>org.apache.causeway.valuetypes</groupId>
+			<artifactId>causeway-valuetypes-asciidoc-ui</artifactId>
+			<version>3.0.0-SNAPSHOT</version>
+			<type>pom</type>
+		</dependency>
+
 		<!-- TESTING -->
+
+		<dependency>
+		  <groupId>org.springframework.boot</groupId>
+		  <artifactId>spring-boot-starter-test</artifactId>
+		  <scope>test</scope>
+		</dependency>
+
+		<dependency>
+		    <groupId>io.projectreactor</groupId>
+		    <artifactId>reactor-test</artifactId>
+		    <scope>test</scope>
+		</dependency>
 
 		<dependency>
 			<groupId>org.apache.causeway.core</groupId>
