--- a/incubator/viewers/thymeflux/viewer/pom.xml
+++ b/incubator/viewers/thymeflux/viewer/pom.xml
@@ -51,6 +51,26 @@
 		    <artifactId>bootstrap</artifactId>
 		    <version>5.2.3</version>
 		</dependency>
+		
+<!--		<dependency>-->
+<!--		    <groupId>org.webjars.bower</groupId>-->
+<!--		    <artifactId>popper.js</artifactId>-->
+<!--		    <version>2.11.2</version>-->
+<!--		</dependency>-->
+		
+		<dependency>
+		    <groupId>org.webjars</groupId>
+		    <artifactId>popper.js</artifactId>
+		    <version>2.9.3</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>org.webjars.npm</groupId>
+		    <artifactId>htmx.org</artifactId>
+		    <version>1.8.6</version>
+		</dependency>
+
+
 
 		<!-- TODO remove if already provided by 'model'' artifact-->
 		<dependency>
